objects/jiffle__Survey__c.object
<CustomObject>
    <fields>
        <fullName>jiffle__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>AccountSurveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jiffle__Attendee_Name__c</fullName>
        <formula>jiffle__Invites__r.jiffle__Attendee_Name__c</formula>
        <label>Attendee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Attendee_Type__c</fullName>
        <formula>jiffle__Invites__r.jiffle__Contact_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Attendee_UUID__c</fullName>
        <formula>jiffle__Invites__r.jiffle__Attendee__r.jiffle__Attendee_UUID__c</formula>
        <label>Attendee UUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>CampaignSurveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jiffle__Event_Location_UUID__c</fullName>
        <formula>jiffle__Meeting__r.jiffle__Briefing_Center__r.jiffle__Location_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Location UUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Event_Name__c</fullName>
        <formula>jiffle__Meeting__r.jiffle__Event__r.Name</formula>
        <label>Event Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Event_UUID__c</fullName>
        <formula>jiffle__Meeting__r.jiffle__Event__r.jiffle__Event_UUID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event UUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Invites__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invites</label>
        <referenceTo>jiffle__Invites__c</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>InvitesSurveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jiffle__Meeting_ID__c</fullName>
        <formula>jiffle__Meeting__r.jiffle__Meeting_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meeting ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Meeting__c</fullName>
        <label>Meeting</label>
        <referenceTo>jiffle__Meeting__c</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>MeetingSurveys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>jiffle__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>OpportunitySurveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jiffle__Survey_UUID__c</fullName>
        <label>Survey UUID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__UUID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Survey Response UUID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Survey</label>
    <listViews>
        <fullName>jiffle__All</fullName>
        <columns>NAME</columns>
        <columns>jiffle__Event_Name__c</columns>
        <columns>jiffle__Meeting__c</columns>
        <columns>jiffle__Meeting_ID__c</columns>
        <columns>jiffle__Attendee_Name__c</columns>
        <columns>jiffle__Attendee_Type__c</columns>
        <columns>jiffle__Invites__c</columns>
        <columns>jiffle__Account__c</columns>
        <columns>jiffle__Opportunity__c</columns>
        <columns>jiffle__Campaign__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>jiffle__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MS-{0000000000}</displayFormat>
        <label>Survey Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>